--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,16 @@ h3 {
   text-align: center;
 }
 
+header {
+  text-align: center;
+}
+
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 65%;
-    height: 50%
+    width: 100%;
+    height: 40%
   }
   
   img.resize { 
@@ -44,4 +48,12 @@ h3 {
   /* Clear floats after image containers */
   .row {
     display: flex;
+  }
+
+  article {
+    background-color: rgb(228, 226, 226);
+    width: 600px;
+    border: 5px solid rgb(150, 206, 228);
+    padding: 20px;
+    margin: 20px;
   }
